--- a/package.json
+++ b/package.json
@@ -6,24 +6,33 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@nuxt/ui": "^4.2.1",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4",
-    "@vueuse/core": "^13.9.0",
-    "vue-i18n": "^9.3.1"
+    "@vueuse/core": "^14.1.0",
+    "vue-i18n": "^11.2.2"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
+    "@types/node": "^25.0.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.2.5",
-    "vue-tsc": "^3.1.4"
+    "vite": "npm:rolldown-vite@7.2.11",
+    "vue-tsc": "^3.1.4",
+    "vitest": "^4.0.15",
+    "@vue/test-utils": "^2.4.0",
+    "jsdom": "^27.3.0",
+    "@vitest/ui": "^4.0.15",
+    "@vitest/coverage-v8": "^4.0.15"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.2.5"
+    "vite": "npm:rolldown-vite@7.2.11"
   }
 }
