--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "kam_webui",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "test:run": "vitest run"
-  },
   "dependencies": {
     "@nuxt/ui": "^4.2.1",
-    "vue": "^3.5.24",
-    "vue-router": "^4.6.4",
     "@vueuse/core": "^14.1.0",
-    "vue-i18n": "^11.2.2"
+    "vue": "^3.5.24",
+    "vue-i18n": "^11.2.2",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@types/node": "^25.0.1",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
+    "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.8.1",
+    "jsdom": "^27.3.0",
     "typescript": "~5.9.3",
     "vite": "npm:rolldown-vite@7.2.11",
-    "vue-tsc": "^3.1.4",
     "vitest": "^4.0.15",
-    "@vue/test-utils": "^2.4.0",
-    "jsdom": "^27.3.0",
-    "@vitest/ui": "^4.0.15",
-    "@vitest/coverage-v8": "^4.0.15"
+    "vue-tsc": "^3.1.4"
   },
+  "name": "kam_webui",
   "overrides": {
     "vite": "npm:rolldown-vite@7.2.11"
-  }
+  },
+  "private": true,
+  "scripts": {
+    "build": "vue-tsc -b && vite build",
+    "dev": "vite",
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui"
+  },
+  "type": "module",
+  "version": "0.0.0"
 }
